fix gap aside

--- a/src/containers/aside/Aside.scss
+++ b/src/containers/aside/Aside.scss
@@ -9,7 +9,7 @@
     padding-top: 50px;
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 134px;
     align-items: center;
   }
 }
@@ -35,7 +35,7 @@
   }
 
   &__img {
-    width: 20px;
-    height: auto;
+    width: 18px;
+    height: 18px;
   }
 }
